// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/Ship Image Aircraft 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhCb dXpKrV"
    src="aircraft.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Battleship 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhCb dXpKrV"
    src="battleship.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Carriership 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhCb dXpKrV"
    src="carriership.png"
  />
</div>
`;

exports[`Storyshots app/Ship Image Submarine 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <img
    className="sc-AxhCb dXpKrV"
    src="submarine.png"
  />
</div>
`;

exports[`Storyshots game/GameScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznKkj ddZKLX"
  >
    <div
      className="sc-AxirZ gShnhs"
    >
      <span
        className="sc-AxiKw gYzdGX"
      >
        BATTLESHIP
      </span>
    </div>
    <div
      className="sc-fzqBZW gPkZyG"
    >
      <div
        className="sc-fzqNJr iHCuNR"
      >
        <div
          className="sc-fznZeY hRYVDS"
        >
          <div
            className="sc-fzozJi bAECwW"
          >
            <span
              className="sc-fzoLsD kREhcP"
            >
              0
            </span>
            <span
              className="sc-fzpans Xcsvh"
            >
              Hits
            </span>
          </div>
          <div
            className="sc-fzozJi bAECwW"
          >
            <span
              className="sc-fzoLsD kREhcP"
            >
              0
            </span>
            <span
              className="sc-fzpans Xcsvh"
            >
              Shots
            </span>
          </div>
          <div
            className="sc-fzozJi bAECwW"
          >
            <span
              className="sc-fzoLsD kREhcP"
            >
              0
            </span>
            <span
              className="sc-fzpans Xcsvh"
            >
              Turns
            </span>
          </div>
        </div>
        <div
          className="sc-fzokOt guPglg"
        />
      </div>
      <div
        className="sc-AxheI cHsWBw"
      >
        <div
          className="sc-Axmtr cQYgtJ"
        />
        <span
          className="sc-AxmLO euKxqN"
        >
          1
        </span>
        <span
          className="sc-AxmLO mXySM"
        >
          2
        </span>
        <span
          className="sc-AxmLO kNeTeX"
        >
          3
        </span>
        <span
          className="sc-AxmLO ccGuQi"
        >
          4
        </span>
        <span
          className="sc-AxmLO jwoSkl"
        >
          5
        </span>
        <span
          className="sc-AxmLO foBTMk"
        >
          6
        </span>
        <span
          className="sc-AxmLO eCZtRX"
        >
          7
        </span>
        <span
          className="sc-AxmLO hhWFce"
        >
          8
        </span>
        <span
          className="sc-AxmLO BrTnq"
        >
          9
        </span>
        <span
          className="sc-AxmLO kMSGHX"
        >
          10
        </span>
        <span
          className="sc-AxmLO iqwxsF"
        >
          A
        </span>
        <span
          className="sc-AxmLO iqxkuM"
        >
          B
        </span>
        <span
          className="sc-AxmLO iqxUqr"
        >
          C
        </span>
        <span
          className="sc-AxmLO iqyHsy"
        >
          D
        </span>
        <span
          className="sc-AxmLO iqxvpx"
        >
          E
        </span>
        <span
          className="sc-AxmLO iqyirE"
        >
          F
        </span>
        <span
          className="sc-AxmLO iqyYAv"
        >
          G
        </span>
        <span
          className="sc-AxmLO iqzLCC"
        >
          H
        </span>
        <span
          className="sc-AxmLO dqBTCK"
        >
          I
        </span>
        <span
          className="sc-AxmLO draigT"
        >
          J
        </span>
        <div
          className="sc-AxhUy bDoyVB"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bpdFqw"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy eWbdDn"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy DBOPS"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy gOmjXF"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy gAbqsA"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy iiNSDj"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy dQoDPO"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bKEExO"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jbvxcD"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy cDTPHI"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bSAiDJ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy fwwaCW"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bHiLPD"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hORAJM"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hdxTFN"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy iJiPCS"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy eTVAPz"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy JZnLH"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kcaNOK"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy ggVFDn"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jgmgLC"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kxUuih"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jsWAig"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy fTxDwD"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy iSOeES"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hTHmRV"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy gOJsRU"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy cFtkYQ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jWkdDF"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hhAWpu"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy esBgKr"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kYprhQ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy ffvTTt"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy gUcUiK"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy efdeDH"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy iucjRE"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy cBiMDh"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bENUmJ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kWPupM"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jXkkmt"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jIZqHo"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hRBbLr"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy dzbMXW"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jJMifJ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jvBoAE"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy fnnUvf"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy UOFHK"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy keApOG"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy gfVyUz"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kXPAYA"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kmvTUB"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy irVYLa"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy eCIJXH"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kKryRQ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jYXRNR"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy fNIRuO"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bYvCHv"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jdUZcz"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hgAPGG"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy dKgkyT"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy gJwLHi"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy ckfcNF"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bfhiNE"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy iVdVAX"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy EYNkq"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy eSaUNB"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy dNdaNA"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy iDPUw"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hzuIzl"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy eKLBla"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy bVLLFX"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy cKzZNo"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy ihclXN"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jVJmne"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hgJwIb"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy fsvRNk"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kOYdXJ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kxuiHl"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy izZZls"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hWFRRO"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy cJzwuL"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kcRXhw"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kNZHUR"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kMpMGW"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy fzjrjT"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy DFDiU"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy boNnWp"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kDcPxR"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy dWntIU"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hldguf"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kYgNGe"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy hnJdiJ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jQRyis"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy kaNbjn"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy cyuYWq"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy jdSsJd"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy rFejQ"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy loFAVA"
          data-testid="tile"
          onClick={[Function]}
        />
        <div
          className="sc-AxhUy dkKIll"
          data-testid="tile"
          onClick={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots game/Grid Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxheI cHsWBw"
  >
    <div
      className="sc-Axmtr cQYgtJ"
    />
    <span
      className="sc-AxmLO euKxqN"
    >
      1
    </span>
    <span
      className="sc-AxmLO mXySM"
    >
      2
    </span>
    <span
      className="sc-AxmLO kNeTeX"
    >
      3
    </span>
    <span
      className="sc-AxmLO ccGuQi"
    >
      4
    </span>
    <span
      className="sc-AxmLO jwoSkl"
    >
      5
    </span>
    <span
      className="sc-AxmLO foBTMk"
    >
      6
    </span>
    <span
      className="sc-AxmLO eCZtRX"
    >
      7
    </span>
    <span
      className="sc-AxmLO hhWFce"
    >
      8
    </span>
    <span
      className="sc-AxmLO BrTnq"
    >
      9
    </span>
    <span
      className="sc-AxmLO kMSGHX"
    >
      10
    </span>
    <span
      className="sc-AxmLO iqwxsF"
    >
      A
    </span>
    <span
      className="sc-AxmLO iqxkuM"
    >
      B
    </span>
    <span
      className="sc-AxmLO iqxUqr"
    >
      C
    </span>
    <span
      className="sc-AxmLO iqyHsy"
    >
      D
    </span>
    <span
      className="sc-AxmLO iqxvpx"
    >
      E
    </span>
    <span
      className="sc-AxmLO iqyirE"
    >
      F
    </span>
    <span
      className="sc-AxmLO iqyYAv"
    >
      G
    </span>
    <span
      className="sc-AxmLO iqzLCC"
    >
      H
    </span>
    <span
      className="sc-AxmLO dqBTCK"
    >
      I
    </span>
    <span
      className="sc-AxmLO draigT"
    >
      J
    </span>
    <div
      className="sc-AxhUy bDoyVB"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bpdFqw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy eWbdDn"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy DBOPS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy gOmjXF"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy gAbqsA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy iiNSDj"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy dQoDPO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bKEExO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jbvxcD"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy cDTPHI"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bSAiDJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy fwwaCW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bHiLPD"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hORAJM"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hdxTFN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy iJiPCS"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy eTVAPz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy JZnLH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kcaNOK"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy ggVFDn"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jgmgLC"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kxUuih"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jsWAig"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy fTxDwD"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy iSOeES"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hTHmRV"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy gOJsRU"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy cFtkYQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jWkdDF"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hhAWpu"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy esBgKr"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kYprhQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy ffvTTt"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy gUcUiK"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy efdeDH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy iucjRE"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy cBiMDh"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bENUmJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kWPupM"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jXkkmt"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jIZqHo"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hRBbLr"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy dzbMXW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jJMifJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jvBoAE"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy fnnUvf"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy UOFHK"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy keApOG"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy gfVyUz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kXPAYA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kmvTUB"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy irVYLa"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy eCIJXH"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kKryRQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jYXRNR"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy fNIRuO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bYvCHv"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jdUZcz"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hgAPGG"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy dKgkyT"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy gJwLHi"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy ckfcNF"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bfhiNE"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy iVdVAX"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy EYNkq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy eSaUNB"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy dNdaNA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy iDPUw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hzuIzl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy eKLBla"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy bVLLFX"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy cKzZNo"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy ihclXN"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jVJmne"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hgJwIb"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy fsvRNk"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kOYdXJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kxuiHl"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy izZZls"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hWFRRO"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy cJzwuL"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kcRXhw"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kNZHUR"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kMpMGW"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy fzjrjT"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy DFDiU"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy boNnWp"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kDcPxR"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy dWntIU"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hldguf"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kYgNGe"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy hnJdiJ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jQRyis"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy kaNbjn"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy cyuYWq"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy jdSsJd"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy rFejQ"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy loFAVA"
      data-testid="tile"
      onClick={[Function]}
    />
    <div
      className="sc-AxhUy dkKIll"
      data-testid="tile"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots game/Header Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-AxirZ gShnhs"
  >
    <span
      className="sc-AxiKw gYzdGX"
    >
      BATTLESHIP
    </span>
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Aircraft 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzplWN fdlmmB"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="aircraft.png"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Battleship 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzplWN fdlmmB"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="battleship.png"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Carriership 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzplWN fdlmmB"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="carriership.png"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
  </div>
</div>
`;

exports[`Storyshots game/Ship Item Submarine 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzplWN fdlmmB"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="submarine.png"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
    <div
      className="sc-fznyAO itYbmg"
    />
  </div>
</div>
`;

exports[`Storyshots game/Stat Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoyAV bDlqZA"
  >
    <div
      className="sc-fzozJi bAECwW"
    >
      <span
        className="sc-fzoLsD kREhcP"
      >
        10
      </span>
      <span
        className="sc-fzpans Xcsvh"
      >
        Title
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots game/Tile Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoLag hsoPTx"
  >
    <div
      className="sc-AxhUy bDoyVB"
      data-testid="tile"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots game-mode/Button Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoXzr hfKlmZ"
    onClick={[Function]}
  >
    READY
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Custom 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzpjYC fNcYWu"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="submarine.png"
    />
    <span
      className="sc-fznxsB fvMaWZ"
    >
      CUSTOM
    </span>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Easy 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzpjYC fNcYWu"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="carriership.png"
    />
    <span
      className="sc-fznxsB fvMaWZ"
    >
      EASY
    </span>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Hard 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzpjYC fNcYWu"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="aircraft.png"
    />
    <span
      className="sc-fznxsB fvMaWZ"
    >
      HARD
    </span>
  </div>
</div>
`;

exports[`Storyshots game-mode/Game Mode Item Medium 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzpjYC fNcYWu"
  >
    <img
      className="sc-AxhCb dXpKrV"
      src="battleship.png"
    />
    <span
      className="sc-fznxsB fvMaWZ"
    >
      MEDIUM
    </span>
  </div>
</div>
`;

exports[`Storyshots game-mode/Title Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznJRM bqxTlr"
  >
    GAME MODE
  </div>
</div>
`;

exports[`Storyshots home/Button Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fznWqX dgitOw"
    onClick={[Function]}
  >
    PRUEBA
  </div>
</div>
`;

exports[`Storyshots home/HomeScreen Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzqARJ kELDQW"
  >
    <div
      className="sc-fzqNqU hqGTqJ"
    >
      <div
        className="sc-fzoiQi kgmdW title"
      >
        BATTLESHIP
      </div>
      <div
        className="sc-fznWqX dgitOw"
      >
        NEW GAME
      </div>
      <div
        className="sc-fznWqX dgitOw"
      >
        LEADERBOARD
      </div>
      <div
        className="sc-fznWqX dgitOw"
      >
        OPTIONS
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots home/Title Default 1`] = `
<div
  className="sc-AxjAm dQzhcE"
>
  <div
    className="sc-fzoiQi kgmdW"
  >
    BATTLESHIP
  </div>
</div>
`;
